fixed overflow issue on front page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -147,7 +147,7 @@ header {
     font-size: 65%;
     margin-top: 1%;
     margin-bottom: 1%;
-    margin-right: 20%;
+    margin-right: 25%;
     padding: 0px;
 }
 
@@ -157,19 +157,15 @@ header {
     text-decoration: none;
     text-transform: uppercase;   
     /*padding: 8px;*/
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-right: 1px solid #fff;
-    border-left: 1px solid #fff;
+    border: 1px solid #fff;    
     /*transition: border-left 1s;*/    
 }
 
 .sticky .main-nav li a:active,
 .sticky .main-nav li a:hover {
     color: #8e44ad;
-    border-right: 1px solid;
-    border-bottom: 1px solid;
-    transition: border-right 1s, border-bottom 1s;
+    border: 1px solid;    
+    transition: border 1s;
 }
 
 /* End Sticky Nav */
@@ -370,6 +366,7 @@ header {
 .underline-box {
     height: 2px;
     background-color: #8e44ad;
+    margin-top:1%;
     margin-left: 45%;
     margin-right: 45%;
     width: 10%;
